--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ section p {
 
 /* ==================== BANNER PRINCIPAL ==================== */
 .banner {
-  background-image: url('https://i.imgur.com/CkQxKX0.jpg'); /* Puedes cambiar la imagen */
+  background-image: url('https://pin.it/1FlcPcI0g'); /* Puedes cambiar la imagen */
   background-size: cover;
   background-position: center;
   padding: 100px 20px;
