--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ section p {
 
 /* ==================== BANNER PRINCIPAL ==================== */
 .banner {
-  background-image: url('https://img.freepik.com/foto-gratis/maquillaje-accesorios-belleza_23-2148741184.jpg'); /* Imagen 4 */
+  background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20231130/pngtree-cosmetic-makeup-flat-lay-with-copy-space-pink-white-background-image_13898744.jpg'); /* Imagen 4 */
   background-size: cover;
   background-position: center;
   padding: 120px 20px;
